fix searchbar being cut off on mobile

--- a/src/app/components/misc/Searchbar/searchbar.scss
+++ b/src/app/components/misc/Searchbar/searchbar.scss
@@ -17,7 +17,8 @@
         background: none;
         color: $font-color;
         padding: $l $l*1.25;
-        width: calc(100% - 4rem);
+        width: 50px;
+        flex: auto;
         height: 100%;
         @include placeholder-color(darken($gray-light, 20%));
 
